# advent_2023

./: BUILD.bazel  MODULE.bazel  bazel-advent_2023  bazel-bin  bazel-out  bazel-testlogs  main.py  requirements.in  requirements_lock.txt
challenges/: BUILD.bazel  day_01.py  day_01_test.py  day_02.py  day_02_test.py  day_03.py  day_03_test.py  day_04.py  day_04_test.py
input/: BUILD.bazel
