load("@advent_2023_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

_DAYS = [
    "01",
    "02",
    "03",
    "04",
]

py_library(
    name = "all",
    visibility = ["//visibility:public"],
    deps = [":day_{}".format(d) for d in _DAYS],
)

[
    py_library(
        name = "day_{}".format(d),
        srcs = ["day_{}.py".format(d)],
    )
    for d in _DAYS
]

[
    py_test(
        name = "day_{}_test".format(d),
        srcs = ["day_{}_test.py".format(d)],
        deps = [
            ":day_{}".format(d),
            requirement("absl-py"),
        ],
    )
    for d in _DAYS
]
